--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~47.0.8",
     "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
+    "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
